5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1758_1576.log
== TEST (2019-05-23 10:41:58) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:42:14) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:46:44) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 0 
print(size(v1))
while (i < v1):
	if(v1[0]== 11 and v2[0] == 22):
		print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:47:02) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 11 
print(size(v1))
while (i < v1):
	if(v1[0]== 11 and v2[0] == 22):
		print("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:41) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 11 
print(size(v1))
while (i < v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:03) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 11 
print(size(v1))
while (i < v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:42) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 0
print(size(v1))
while (i < v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:15) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 0
print(size(v1))
while (i > v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
i = 0
print(size(v1))
while (i < v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:20) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
while (i < v1):
	if(sum(v1) > sum(v2)):
		print("EUSAPIA")
	elif(sum(v1) < sum(v2)):
		print("BARSANULFO")
	elif(sum(v1)==sum(v2)):
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:47) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if ((v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 v2[i]==22)):
		soma1 = soma1 + 1
	if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 v1[i]==22)):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 14
    if ((v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 v2[i]==22)):
                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:14) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 v2[i]==22):
		soma1 = soma1 + 1
	if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 v1[i]==22)):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 14
    if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 v2[i]==22):
                                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:10) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 16
    if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
                                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:18) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 16
    if((v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
                                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:44) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:07) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:42) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1

		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:10) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1

		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:15:26) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1

		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:55) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:12) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 16
    if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1i] ==22):
                                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:34) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:21:01) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
2.65342
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:21:10) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
2.91136
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:38:07) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
1443.4
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:38:07) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
1453.75
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:39:03) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1

		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
1455.7
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:40:02) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v2[i] ==22):
		soma2 = soma2 + 1

		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
1486.72
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 12:03:23) 
-- CODE:
from numpy import *
v1 = array(eval(input("Vetor de Eusapia: ")))
v2 = array(eval(input("Vetor de Barsanulfo: ")))
# 11 == PEDRA
# 22 == PAPEL
# 33 == TESOURA
print(size(v1))
i = 0  # contador
soma1 = 0   # contador de v1
soma2 = 0   # contador de v2

while (i < size(v1)):
	# jogador 1 ganhando
	if (v1[i] == 11 and v2[i] == 33) or (v1[i] == 22 and v2[i] == 11) or (v1[i]== 33 and v2[i] ==22):
		soma1 = soma1 + 1
	if( v2[i] == 11 and v1[i] == 33) or (v2[i] == 22 and v1[i] == 11) or (v2[i]== 33 and v1[i] ==22):
		soma2 = soma2 + 1
	i= i+1
		
if(soma1>soma2):
	print("EUSAPIA")
if(soma1<soma2):
	print("BARSANULFO")
if(soma1 == soma2):
	print("EMPATE")
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.503377
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:22:51) 
-- CODE:
from numpy import*
ve = array(eval(input("Jogadas de Eusapia: ")))
vb = array(eval(input("Jogadas de Barsanulfo: ")))

p = 11 #PEDRA
pa = 22 #PAPEL
t = 33 #TESOURA
#EUSAPIA GANHA:
print(size(ve))
if((ve==p and vb==t)or(ve==pa and vb==p) or (ve==t and vb==pa)):
	print('EUSAPIA')
	

	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:24:15) 
-- CODE:
from numpy import*
ve = array(eval(input("Jogadas de Eusapia: ")))
vb = array(eval(input("Jogadas de Barsanulfo: ")))

p = 11 #PEDRA
pa = 22 #PAPEL
t = 33 #TESOURA
#EUSAPIA GANHA:
print(size(ve))
if((ve==11 and vb==33)or(ve==22 and vb==11) or (ve==33 and vb==22)):
	print('EUSAPIA')
	

	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:31:12) 
-- CODE:
from numpy import*
ve = array(eval(input("Jogadas de Eusapia: ")))
vb = array(eval(input("Jogadas de Barsanulfo: ")))

p = 11 #PEDRA
pa = 22 #PAPEL
t = 33 #TESOURA
#EUSAPIA GANHA:
print(size(ve))

i= 0 
se=0
sb=0

while(i < size(ve)):
	if((ve[i]==11 and vb[i]==33)or(ve[i]==22 and vb[i]==11) or (ve[i]==33 and vb[i]==22)):
		se = se + 1
	if((vb[i]==11 and ve[i]==33)or(vb[i]==22 and ve[i]==11) or (vb[i]==33 and ve[i]==22)):
		sb = sb + 1
	i = i + 1
if(se>sb):
	print('EUSAPIA')
if(se<sb):
	print('BARSANULFO')
if(se==sb):
	print("EMPATE")
	

	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:31:30) 
-- CODE:
from numpy import*
ve = array(eval(input("Jogadas de Eusapia: ")))
vb = array(eval(input("Jogadas de Barsanulfo: ")))

p = 11 #PEDRA
pa = 22 #PAPEL
t = 33 #TESOURA
#EUSAPIA GANHA:
print(size(ve))

i= 0 
se=0
sb=0

while(i < size(ve)):
	if((ve[i]==11 and vb[i]==33)or(ve[i]==22 and vb[i]==11) or (ve[i]==33 and vb[i]==22)):
		se = se + 1
	if((vb[i]==11 and ve[i]==33)or(vb[i]==22 and ve[i]==11) or (vb[i]==33 and ve[i]==22)):
		sb = sb + 1
	i = i + 1
if(se>sb):
	print('EUSAPIA')
if(se<sb):
	print('BARSANULFO')
if(se==sb):
	print("EMPATE")
	

	
	
	
	
	
	
	
-- EXECUTION TIME:
0.506262
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
